--- a/jenkins/dockerfiles/clang-8/Dockerfile
+++ b/jenkins/dockerfiles/clang-8/Dockerfile
@@ -6,5 +6,7 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
 RUN wget -q -O - https://apt.llvm.org/llvm-snapshot.gpg.key| apt-key add -
 RUN apt-add-repository 'deb http://apt.llvm.org/unstable/ llvm-toolchain main'
 RUN apt-get update && apt-get install --no-install-recommends -y \
-    clang-8 clang
+    binutils-aarch64-linux-gnu \
+    clang-8
 
+RUN update-alternatives --install /usr/bin/clang clang /usr/bin/clang-8 500
