--- a/test-configs.yaml
+++ b/test-configs.yaml
@@ -469,6 +469,14 @@ device_types:
     filters:
       - blacklist: {defconfig: ['allnoconfig', 'allmodconfig']}
 
+  meson-g12a-x96-max:
+    name: 'meson-g12a-x96-max'
+    mach: amlogic
+    class: arm64-dtb
+    boot_method: uboot
+    filters:
+      - blacklist: {defconfig: ['allnoconfig', 'allmodconfig']}
+
   meson_gxbb_p200:
     name: 'meson-gxbb-p200'
     mach: amlogic
@@ -950,6 +958,9 @@ test_configs:
     test_plans: [boot_nfs]
 
   - device_type: meson_g12a_sei510
+    test_plans: [boot, kselftest, simple]
+
+  - device_type: meson-g12a-x96-max
     test_plans: [boot, kselftest, simple]
 
   - device_type: meson_gxbb_p200
